--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="estilo.css">
 
-    <title>Codar - </title>
+    <title>Codar</title>
   </head>
   <body>
     
@@ -67,6 +67,7 @@
             <div class="textoprincipal">
             <h3><b>Alavanque seu negócio com um </b></h3>
             <h1><b>Website incrível!</b></h1>
+            <br>
             <button class="btn btn-danger mt-4 btn-lg">
               Solicitar orçamento
             </button>
@@ -98,7 +99,7 @@
         <div class="col d-flex justify-content-right">
           <div class="img2">
             <div class="col d-none d-lg-block">
-              <img src="assets/coding_.png" class="img-fluid" width="50%">
+              <img src="assets/coding_.png" class="img-fluid">
             </div>
           </div>
         </div>
